package com.oop.stockflow.model;

public class DryGoodProduct {
}
